Re-upload complet du vrai projet portfolio

--- a/CV.html
+++ b/CV.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV - Malo Le Douarin</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style/cv.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/cv.css">
 </head>
 
 <body>
     <nav class="sidebar">
         <div class="sidebar-header">
-            <h1>Malo Le Douarin</h1>
+            <a href="index.html" class="sidebar-title">
+                <h1>Malo Le Douarin</h1>
+            </a>
             <p>Portfolio</p>
         </div>
 
@@ -21,35 +23,79 @@
             <li><a href="veille.html" class="nav-link">Veille Technologique</a></li>
             <li><a href="e4.html" class="nav-link">Épreuve E4</a></li>
             <li><a href="cv.html" class="nav-link active">CV</a></li>
+            <li><a href="Diaporama.html" class="nav-link">Diaporama client leger</a></li>
+            <li><a href="Diapoclientlourd.html" class="nav-link">Diaporama client Lourd</a></li>
+            <li><a href="stage.html" class="nav-link active">Stage</a></li>
+
         </ul>
     </nav>
 
     <main>
-        <!-- Contenu du CV comme précédemment -->
         <div class="cv-header">
             <h1>Malo Le Douarin</h1>
             <div class="contact-info">
-                <p>Né le 21/10/2005</p>
-                <p>maloledouarin05@gmail.com</p>
-                <p>07 67 93 11 06</p>
+                <p>📅 Né le 21/10/2005</p>
+                <p>📧 maloledouarin05@gmail.com</p>
+                <p>📞 07 67 93 11 06</p>
             </div>
         </div>
 
         <section class="cv-section">
-            <h2>Formation</h2>
-            <!-- Contenu de la formation -->
+            <h2>🎓 Formation</h2>
+            <ul>
+                <li><strong>BAC PRO SSIHT</strong> - Lycée La Fontaine Des Eaux, Dinan (22100) <br>📅 2020 - 2023</li>
+                <li><strong>BTS SIO SLAM</strong> - AFTC Rennes (35000) <br>📅 2023 - 2025</li>
+            </ul>
         </section>
 
         <section class="cv-section">
-            <h2>Expérience Professionnelle</h2>
-            <!-- Contenu de l'expérience -->
+            <h2>💼 Expérience Professionnelle</h2>
+            <ul>
+                <li><strong>21 semaines de stage</strong> en entreprise pendant la formation BAC PRO</li>
+                <li><strong>8 semaines de stage</strong> dans la même entreprise pendant la formation BTS</li>
+                <li><strong>Travail saisonnier en restauration</strong> au port de Dinan (5 mois)</li>
+            </ul>
         </section>
 
         <section class="cv-section">
-            <h2>Compétences</h2>
-            <!-- Contenu des compétences -->
+            <h2>🛠️ Compétences</h2>
+            <div class="competence-grid">
+                <div class="competence-card">
+                    <h3>Développement Web</h3>
+                    <p>HTML, CSS, JavaScript, PHP, Laravel, Tailwind CSS</p>
+                </div>
+                <div class="competence-card">
+                    <h3>Développement Back-End</h3>
+                    <p>Laravel, PHP, Node.js, API REST, MySQL</p>
+                </div>
+                <div class="competence-card">
+                    <h3>Gestion des Bases de Données</h3>
+                    <p>MySQL, PostgreSQL, MongoDB, DBeaver</p>
+                </div>
+                <div class="competence-card">
+                    <h3>Administration Système</h3>
+                    <p>Linux, Windows Server, DHCP, GLPI</p>
+                </div>
+                <div class="competence-card">
+                    <h3>Gestion de Projet</h3>
+                    <p>Git, GitHub, GitLab, Agile, Trello</p>
+                </div>
+                <div class="competence-card">
+                    <h3>Tests & Sécurité</h3>
+                    <p>PHPUnit, Sécurisation API, Authentification</p>
+                </div>
+                <div class="competence-card">
+                    <h3>Gere bien la pression</h3>
+                    <p>travail acharné en restauration dans un lieux tres touristique</p>
+                </div>
+                <div class="competence-card">
+                    <h3>Travail d'équipe</h3>
+                    <p>management, ecoute, execute</p>
+                </div>
+            </div>
         </section>
     </main>
+
 </body>
 
 </html>
