--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <nav class="sidebar">
         <div class="sidebar-header">
-            <h1>Malo Le Douarin</h1>
+            <a href="index.html" class="sidebar-title">
+                <h1>Malo Le Douarin</h1>
+            </a>
             <p>Portfolio</p>
         </div>
 
@@ -21,6 +23,10 @@
             <li><a href="veille.html" class="nav-link">Veille Technologique</a></li>
             <li><a href="e4.html" class="nav-link">Épreuve E4</a></li>
             <li><a href="cv.html" class="nav-link">CV</a></li>
+            <li><a href="Diaporama.html" class="nav-link">Diaporama client leger</a></li>
+            <li><a href="Diapoclientlourd.html" class="nav-link">Diaporama client Lourd</a></li>
+            <li><a href="stage.html" class="nav-link active">Stage</a></li>
+
         </ul>
     </nav>
 
